# pyFishSenseDev_bak

./: .gitignore  LICENSE  README.md  array_read_write.py  automatic_runner.py  average_pool_test.py  calibrate_laser.py  cip_example.py  constants.py  data_box_generator.ipynb  detect_laser.py  detect_laser_line.py  edge_detection.py  fish_mass.py  graph_fish_lengths.py  intensity_distribution.py  interest_point_detection.py  label_corners.py  label_laser.py  label_laser_1.py  label_laser_calibration.py  label_laser_fish.py  laser_calibration.py  laser_coords.json  laser_coords_1.json  laser_detection.ipynb  laser_detector.ipynb  laser_dot_guess_correction.py  laser_field_calibration.py  laser_parallax.py  local_peak_detection.ipynb  process_image_for_lc.py  process_results_status_csv.ipynb  pyproject.toml  raw_to_png.py  rectify.py  requirements.txt  slate_plane_detector.ipynb  test_polygon.ipynb  undistort_images.py
camera_imaging_pipeline/: example.py  params1.json  params2.json  params_color.json  params_red.json  process.py  readme.md
e4e_camera_calibration/: __init__.py  __main__.py  argument_parser_builder.py
edge_detection_framework/: edge_detection.py  helpers.py  readme.md
fishsense-lite-pipeline/: __init__.py
fishsense_lite_python_pipeline/: __init__.py  fish_head_tail_detector.py  fish_segmentation_inference.py  fish_symmetry.py  image_rectifier.py  laser_detector.py  raw_processor.py  world_point_handler.py
helpers/: closest_to_vanishing_point.py  img_zoom.py
interest_point_detection/: readme.md
labeling_tools/: label_laser.py
laser_detection/: detect_laser.py  detect_laser_line.py  edge_detection.py
old_configs/: fsl-02d-lens-raw.pkg  laser-calibration-fsl-02d.pkg
pyFishSense/: fish_head_tail_detector.py  image_rectifier.py  laser_detector.py  world_point_handler.py
pyfishsense/: __init__.py  fish_head_tail_detector.py  fish_segmentation_inference.py  image_rectifier.py  laser_detector.py  world_point_handler.py
pyfishsensedev/: __init__.py  fish_head_tail_detector.py  image_rectifier.py  laser_detector.py  world_point_handler.py
scripts/: build_fishial_onnx_model.py
tests/: average_pool_test.py  cip_example.py  img_read_out.py  intensity_distribution.py  laser_dot_guess_correction.py  tests_setup.py
tools/: fish_mass.py  label_laser.py  label_laser_calibration.py  label_laser_fish.py  laser_calibration.py  (+2 more)
(+67 files in other folders)
