[tool.poetry]
name = "pyfishsense"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.1"
opencv-python = "4.7.0.72"
matplotlib = "^3.6.3"
tqdm = "^4.64.1"
scikit-image = "^0.21.0"
rawpy = "^0.18.1"
numba = "^0.57.1"
Pillow = "^10.0.1"
requests = "^2.31.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
wheel = "^0.41.3"
pandas = "^2.1.3"

[tool.poetry.dev-dependencies]
black = "^23.12.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
