[tool.poetry]
name = "pyfishsensedev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "4.7.0.72"
matplotlib = "^3.6.3"
tqdm = "^4.66.3"
scikit-image = "^0.21.0"
rawpy = "^0.18.1"
Pillow = "^10.0.1"
requests = "^2.31.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
wheel = "^0.41.3"
pandas = "^2.2.1"
numpy = "^1.26.4"
numba = "^0.59.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ipykernel = "^6.27.1"
pytest = "^8.2.0"
nas-unzip = {git = "https://github.com/UCSD-E4E/synology-download.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.2"
#addopts = "-ra -q"
testpaths = [
    "tests",
]
